[project]
name = "df_img"
dynamic = ["version", "description"]
authors = [{ name = "Arthur Harduim", email = "harduim.arthur@gmail.com" }]
dependencies = [
    "pandas>=1.1.5",
    "nbconvert>=5",
    "matplotlib>=3.1",
    "beautifulsoup4>4.11.1",
    "kaleido>=0.2.1",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
keywords = [
    "jupyter",
    "notebook",
    "pandas",
    "dataframe",
    "image",
    "pdf",
    "markdown",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]


[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
addopts = '-n auto --forked'

[tool.flake8]
max-line-length = 100
max-complexity = 18

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
